- Some keyboard actions added - Add select video files dialog