@@ -17,13 +17,13 @@ import com.github.kokorin.jaffree.ffprobe.FFprobe;
 import com.github.kokorin.jaffree.ffprobe.Stream;
 import io.vavr.Lazy;
 import javafx.application.Platform;
+import javafx.beans.binding.Bindings;
 import javafx.beans.property.BooleanProperty;
 import javafx.beans.property.SimpleBooleanProperty;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
-import javafx.collections.ListChangeListener;
 import javafx.concurrent.Task;
 import javafx.event.ActionEvent;
 import javafx.event.Event;
@@ -36,6 +36,7 @@ import javafx.scene.Scene;
 import javafx.scene.control.Alert;
 import javafx.scene.control.Button;
 import javafx.scene.control.ButtonType;
+import javafx.scene.control.CheckBox;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Dialog;
 import javafx.scene.control.Label;
@@ -65,6 +66,7 @@ import javafx.stage.DirectoryChooser;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
 import javafx.util.Callback;
+import org.apache.commons.math3.util.Precision;
 import org.controlsfx.control.RangeSlider;
 import uk.co.caprica.vlcj.factory.MediaPlayerFactory;
 import uk.co.caprica.vlcj.player.base.LibVlcConst;
@@ -88,6 +90,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import static uk.co.caprica.vlcj.javafx.videosurface.ImageViewVideoSurfaceFactory.videoSurfaceForImageView;
@@ -107,11 +111,14 @@ public class MainController {
     @FXML private StackPane bottomPane;
     @FXML private HBox bottomBarClip;
     @FXML private Button clipPlayStop;
-    @FXML private Button saveClip;
+    @FXML private Button addUpdateClip;
+    @FXML private Button undoClipChanges;
     @FXML private RangeSlider rangeSlider;
 
     private static final int MIN_PIXELS = 200;
     private static final int SKIP_TIME_MILLIS = 5000;
+
+    public static final Image APP_ICON  = new Image(MainController.class.getResourceAsStream( "/icon48.png" ));
 
     public final ImageView PLAY_ICON = new ImageView("play.png");
     public final ImageView CLIP_PLAY_ICON = new ImageView("play.png");
@@ -130,16 +137,16 @@ public class MainController {
         return chooser;
     });
 
-    private final SimpleBooleanProperty projectDirty = new SimpleBooleanProperty(false);
-    private final SimpleBooleanProperty clipDirty = new SimpleBooleanProperty(false);
-    private final SimpleObjectProperty<File> projectFile = new SimpleObjectProperty<>(null);
     private final Map<File, List<Clip>> fileToClips = new HashMap<>();
-
     private double videoWidth = 1920.0;
     private double videoHeight = 1080.0;
 
+    private final SimpleBooleanProperty projectDirty = new SimpleBooleanProperty(false);
+    private final SimpleBooleanProperty clipDirty = new SimpleBooleanProperty(false);
+    private final SimpleObjectProperty<File> projectFile = new SimpleObjectProperty<>(null);
+    private final SimpleObjectProperty<Clip> editingClip = new SimpleObjectProperty<>(null);
+    private final SimpleBooleanProperty playMode = new SimpleBooleanProperty(false);
     private Optional<File> loadedMedia = Optional.empty();
-    private Optional<Clip> editingClip = Optional.empty();
     private Optional<ClipDescriptionData> clipDescription = Optional.empty();
 
     private Stage stage;
@@ -151,8 +158,7 @@ public class MainController {
 
     public boolean playFile(File file) {
         videoPane.setVisible(true);
-        bottomBarPlay.setVisible(true);
-        bottomBarClip.setVisible(false);
+        playMode.set(true);
         embeddedMediaPlayer.controls().stop();
         embeddedMediaPlayer.media().play(file.getAbsolutePath());
         loadedMedia = Optional.of(file);
@@ -190,6 +196,7 @@ public class MainController {
 
                 files.getItems().clear();
                 clips.getItems().clear();
+                fileToClips.clear();
                 try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
                     files.getItems().addAll(mapper.readValue(reader.readLine(), new TypeReference<List<File>>() {
                     }));
@@ -222,11 +229,10 @@ public class MainController {
 
         files.getItems().clear();
         clips.getItems().clear();
+        fileToClips.clear();
 
         projectFile.setValue(null);
         projectDirty.setValue(false);
-
-        fileToClips.clear();
     }
 
     @FXML
@@ -256,8 +262,9 @@ public class MainController {
 
     @FXML
     public void doGenerateVideo(ActionEvent event) {
-        selectClipsDialog(stage)
-                .ifPresent(clips -> generateVideo(stage, clips));
+        selectVideoFiles(stage)
+            .flatMap(files -> selectClipsDialog(stage, files))
+            .ifPresent(clips -> generateVideo(stage, clips));
     }
 
     @FXML
@@ -267,7 +274,7 @@ public class MainController {
     }
 
     @FXML
-    public void doPlayPause(ActionEvent event) {
+    public void doPlayPause(Event event) {
         if (playPause.getGraphic().equals(PAUSE_ICON)) {
             embeddedMediaPlayer.controls().pause();
         } else {
@@ -283,7 +290,7 @@ public class MainController {
     }
 
     @FXML
-    public void doClipPlayStop(ActionEvent event) {
+    public void doClipPlayStop(Event event) {
         if (clipPlayStop.getGraphic().equals(STOP_ICON)) {
             embeddedMediaPlayer.controls().pause();
         } else {
@@ -293,7 +300,7 @@ public class MainController {
     }
 
     @FXML
-    public void doAddClip(ActionEvent event) {
+    public void doAddClip(Event event) {
         embeddedMediaPlayer.controls().pause();
 
         long time = embeddedMediaPlayer.status().time();
@@ -354,22 +361,21 @@ public class MainController {
     }
 
     @FXML
-    public void doCancelClip(ActionEvent event) {
+    public void doEndClipEditing(Event event) {
         if (clipDirty.get()) {
-            if (saveOrDiscardClip(event,"Do wish save the clip before exiting clip editor?") == ButtonType.CANCEL) {
+            if (saveOrDiscardClip(event,"Do wish add/update the clip before exiting clip editor?") == ButtonType.CANCEL) {
                 return;
             }
         }
-        bottomBarPlay.setVisible(true);
-        bottomBarClip.setVisible(false);
-        editingClip = Optional.empty();
+        playMode.set(true);
+        editingClip.setValue(null);
 
         playSlider.setValue(embeddedMediaPlayer.status().time() / 1000.0);
         resetViewport();
     }
 
     @FXML
-    public void doSaveClip(Event event) {
+    public void doAddUpdateClip(Event event) {
         clipDirty.setValue(false);
         projectDirty.setValue(true);
 
@@ -385,7 +391,7 @@ public class MainController {
                 videoImageView.getViewport()
         );
         List<Clip> items = fileToClips.computeIfAbsent(newClip.file, file -> new ArrayList<>());
-        editingClip.ifPresentOrElse(clip -> {
+        Optional.ofNullable(editingClip.getValue()).ifPresentOrElse(clip -> {
             int idx = items.indexOf(clip);
             if (idx >= 0) {
                 items.remove(idx);
@@ -393,22 +399,26 @@ public class MainController {
             } else {
                 items.add(newClip);
             }
-        }, () -> items.add(newClip));
+        }, () -> {
+            items.add(newClip);
+        });
 
         clips.getItems().clear();
         clips.getItems().addAll(items);
 
-        editingClip = Optional.of(newClip);
+        clips.getSelectionModel().select(newClip);
+
+        doEndClipEditing(event);
     }
 
     @FXML
-    public void doClipSetStart(ActionEvent event) {
+    public void doClipSetStart(Event event) {
         clipDirty.setValue(true);
         rangeSlider.setLowValue(embeddedMediaPlayer.status().time() / 1000.0);
     }
 
     @FXML
-    public void doClipSetStop(ActionEvent event) {
+    public void doClipSetStop(Event event) {
         clipDirty.setValue(true);
         rangeSlider.setHighValue(embeddedMediaPlayer.status().time() / 1000.0);
     }
@@ -468,11 +478,11 @@ public class MainController {
                 projectDirty.setValue(true);
                 List<Clip> fileClips = fileToClips.get(file);
                 for (Clip clip : clips.getSelectionModel().getSelectedItems()) {
-                    if (editingClip.filter(clip::equals).isEmpty()) {
+                    if (clip.equals(editingClip.get())) {
+                        showAlert("Alert", "Can't delete current editing clip");
+                    } else {
                         fileClips.remove(clip);
                         clips.getItems().remove(clip);
-                    } else {
-                        showAlert("Alert", "Can't delete current editing clip");
                     }
                 }
             }
@@ -480,15 +490,88 @@ public class MainController {
     }
 
     @FXML
-    public void doSortFiles(ActionEvent event) {
+    public void doSortFilesAlphabetic(ActionEvent event) {
         projectDirty.setValue(true);
         files.getItems().sort(Comparator.comparing(File::getName));
+    }
+
+    @FXML
+    public void doSortFilesDetectDate(ActionEvent event) {
+        projectDirty.setValue(true);
+
+        final Pattern regex1 = Pattern.compile("(\\d{2})-(\\d{2})-(\\d{4})");
+        final Pattern regex2 = Pattern.compile("(\\d{4})-(\\d{2})-(\\d{2})");
+
+        Comparator<File> comparator = (first, second) -> {
+            Matcher matcher11 = regex1.matcher(first.getName());
+            Matcher matcher21 = regex1.matcher(second.getName());
+
+            Matcher matcher12 = regex2.matcher(first.getName());
+            Matcher matcher22 = regex2.matcher(second.getName());
+
+            String matcher1DateString = matcher11.find()
+                ? matcher11.group(3) + matcher11.group(1) + matcher11.group(2)
+                    : matcher12.find()
+                    ? matcher12.group(1) + matcher12.group(2) + matcher12.group(3)
+                    : null;
+
+            String matcher2DateString = matcher21.find()
+                ? matcher21.group(3) + matcher21.group(1) + matcher21.group(2)
+                    : matcher22.find()
+                    ? matcher22.group(1) + matcher22.group(2) + matcher22.group(3)
+                    : null;
+
+            if (matcher1DateString != null && matcher2DateString != null) {
+                int result = matcher1DateString.compareTo(matcher2DateString);
+                if (result != 0) {
+                    return result;
+                }
+            }
+             return first.compareTo(second);
+        };
+        files.getItems().sort(comparator);
     }
 
     @FXML
     public void doSortClips(ActionEvent event) {
         projectDirty.setValue(true);
         clips.getItems().sort(Comparator.comparing(Clip::label));
+    }
+
+    @FXML
+    public void doUndoClipChanges(ActionEvent event) {
+        Optional.ofNullable(editingClip.get()).ifPresent(clip -> {
+            clipDescription = Optional.of(new ClipDescriptionData(
+                clip.label,
+                clip.description,
+                clip.rating
+            ));
+            rangeSlider.setMin(clip.minValue);
+            rangeSlider.setLowValue(clip.lowValue);
+            rangeSlider.setHighValue(clip.highValue);
+            rangeSlider.setMax(clip.maxValue);
+            videoImageView.setViewport(clip.viewportRect);
+        });
+
+        clipDirty.setValue(false);
+    }
+
+    @FXML
+    public void doKeyPressedPlay(KeyEvent event) {
+        switch (event.getCode()) {
+            case SPACE -> doPlayPause(event);
+            case X -> doAddClip(event);
+        }
+    }
+
+    @FXML
+    public void doKeyPressedClip(KeyEvent event) {
+        switch (event.getCode()) {
+            case SPACE -> doClipPlayStop(event);
+            case OPEN_BRACKET -> doClipSetStart(event);
+            case CLOSE_BRACKET -> doClipSetStop(event);
+            case ESCAPE -> doEndClipEditing(event);
+        }
     }
 
     private ButtonType saveOrDiscardClip(Event event, String contentText) {
@@ -500,7 +583,7 @@ public class MainController {
         );
         var choice = dialog.showAndWait().orElse(ButtonType.CANCEL);
         if (choice == ButtonType.YES) {
-            doSaveClip(event);
+            doAddUpdateClip(event);
         }
         return choice;
     }
@@ -511,7 +594,7 @@ public class MainController {
             @Override
             public void mediaPlayerReady(MediaPlayer mediaPlayer) {
                 Platform.runLater(() -> {
-                    if (isPlayerMode()) {
+                    if (playMode.get()) {
                         videoHeight = mediaPlayer.video().videoDimension().getHeight();
                         videoWidth = mediaPlayer.video().videoDimension().getWidth();
                         resetViewport();
@@ -539,7 +622,7 @@ public class MainController {
 
             @Override
             public void timeChanged(MediaPlayer mediaPlayer, long newTime) {
-                if (isPlayerMode()) {
+                if (playMode.get()) {
                     if (!playSlider.isValueChanging()) {
                         playSlider.setValue(newTime / 1000.0);
                     }
@@ -592,13 +675,13 @@ public class MainController {
 
             Point2D mouse = imageViewToImage(videoImageView, new Point2D(e.getX(), e.getY()));
 
-            double newWidth = viewport.getWidth() * scale;
-            double newHeight = viewport.getHeight() * scale;
+            double newWidth = Precision.round(viewport.getWidth() * scale ,2);
+            double newHeight = Precision.round(viewport.getHeight() * scale, 2);
 
-            double newMinX = clamp(mouse.getX() - (mouse.getX() - viewport.getMinX()) * scale,
-                    0, videoWidth - newWidth);
-            double newMinY = clamp(mouse.getY() - (mouse.getY() - viewport.getMinY()) * scale,
-                    0, videoHeight - newHeight);
+            double newMinX = Precision.round(clamp(mouse.getX() - (mouse.getX() - viewport.getMinX()) * scale,
+                    0, videoWidth - newWidth), 2);
+            double newMinY = Precision.round(clamp(mouse.getY() - (mouse.getY() - viewport.getMinY()) * scale,
+                    0, videoHeight - newHeight), 2);
             if (newMinX != viewport.getMinX()
                     || newMinY != viewport.getMinY()
                     || newWidth != viewport.getWidth()
@@ -665,9 +748,9 @@ public class MainController {
                 if (event.getClickCount() > 1) {
                     Clip clickedItem = tableRow.getItem();
                     if (clickedItem != null) {
-                        if (!isPlayerMode() && clipDirty.get()) {
-                            if (editingClip.map(item -> clickedItem != item).orElse(false)) {
-                                if (saveOrDiscardClip(event, "Do wish save the clip before switching to another?") != ButtonType.CANCEL) {
+                        if (!playMode.get() && clipDirty.get()) {
+                            if (!editingClip.get().equals(clickedItem)) {
+                                if (saveOrDiscardClip(event, "Do wish add/update the clip before switching to another?") != ButtonType.CANCEL) {
                                     loadClip(clickedItem);
                                 }
                             }
@@ -685,13 +768,21 @@ public class MainController {
     public void start(Stage stage) {
         this.stage = stage;
 
-        stage.getIcons()
-                .add(new Image(this.getClass().getResourceAsStream( "/icon48.png" )));
+        stage.getIcons().add(APP_ICON);
+
+        bottomBarPlay.visibleProperty().bind(playMode);
+        bottomBarClip.visibleProperty().bind(playMode.not());
 
         initializeFilesTable();
         initializeClipsTable();
         initializeMediaPlayer();
         initializeVideoImageView();
+
+//        playSlider.valueChangingProperty().addListener((obs, wasChanging, isChanging) -> {
+//            if (!isChanging) {
+//                embeddedMediaPlayer.controls().setTime((long) (playSlider.getValue() * 1000));
+//            }
+//        });
 
         playSlider.valueProperty().addListener((observableValue, number, newValue) -> {
             if (playSlider.isValueChanging()) {
@@ -706,10 +797,9 @@ public class MainController {
                 closeProject.setDisable(projectFile.get() == null && !nowDirty);
             });
 
-        saveClip.disableProperty().bind(clipDirty.not());
+        addUpdateClip.disableProperty().bind(clipDirty.not());
 
-        files.getSelectionModel().getSelectedItems()
-                .addListener((ListChangeListener<File>) change -> generateVideo.setDisable(change.getList().size() == 0));
+        undoClipChanges.disableProperty().bind(Bindings.or(clipDirty.not(), editingClip.isNull()));
 
         stage.setOnCloseRequest(windowEvent -> {
             if (!maybeSaveDirtyProject(stage, "Confirm Exit", "Save project changes before exit?")) {
@@ -725,7 +815,6 @@ public class MainController {
         saveProject.setDisable(true);
         closeProject.setDisable(true);
         saveProjectAs.setDisable(true);
-        generateVideo.setDisable(true);
     }
 
     private <T> TableColumn<T, String> createClipNameColumn(
@@ -749,10 +838,6 @@ public class MainController {
         ratingCol.setStyle( "-fx-alignment: center;");
         ratingCol.setResizable(false);
         return ratingCol;
-    }
-
-    private boolean isPlayerMode() {
-        return bottomBarPlay.isVisible();
     }
 
     private Optional<FileFFProbeData> startClipFFProbeMetaFile(File file) {
@@ -846,12 +931,8 @@ public class MainController {
         }
     }
 
-    private Optional<ClipGenerationData> selectClipsDialog(Stage stage) {
-        Dialog<ClipGenerationData> dialog = createStyledDialog(stage.getScene());
-
-        TableView<SelectableData<Clip>> clipsTable = new TableView<>();
-
-        TableColumn<SelectableData<Clip>, Boolean> selectedCol = new TableColumn<>("");
+    private <T> TableColumn<SelectableData<T>, Boolean> createSelectedCol(TableView<SelectableData<T>> table) {
+        TableColumn<SelectableData<T>, Boolean> selectedCol = new TableColumn<>("");
 
         selectedCol.setCellValueFactory(row -> row.getValue().selected);
         selectedCol.setCellFactory(column -> new CheckBoxTableCell<>());
@@ -860,7 +941,66 @@ public class MainController {
         selectedCol.setEditable(true);
         selectedCol.setPrefWidth(30);
 
+        var selectAllCheckBox = new CheckBox();
+        selectAllCheckBox.setSelected(true);
+        selectAllCheckBox.setOnAction(
+                event -> {
+                    event.consume();
+                    table.getItems().forEach(item -> item.selected.setValue(selectAllCheckBox.isSelected()));
+                });
+        selectedCol.setGraphic(selectAllCheckBox);
+
+        return selectedCol;
+    }
+
+    private Optional<List<File>> selectVideoFiles(Stage stage) {
+        Dialog<List<File>> dialog = createStyledDialog(stage.getScene());
+
+        TableView<SelectableData<File>> filesTable = new TableView<>();
+
+        filesTable.setEditable(true);
+
+        TableColumn<SelectableData<File>, Boolean> selectedCol = createSelectedCol(filesTable);
+
+        TableColumn<SelectableData<File>, String> fileCol =  new TableColumn<>("File");
+        fileCol.setCellValueFactory(row -> new SimpleStringProperty(row.getValue().data.getName()));
+
+        filesTable.getColumns().addAll(selectedCol, fileCol);
+
+        filesTable.getItems().addAll(files.getItems().stream()
+                .map(file -> new SelectableData<>(true, file))
+                .toList()
+        );
+
+        dialog.setResultConverter(buttonType -> {
+            if (buttonType == ButtonType.OK) {
+                return filesTable.getItems().stream()
+                                .filter(it -> it.selected.get())
+                                .map(it -> it.data)
+                                .toList();
+            } else {
+                return Collections.emptyList();
+            }
+        });
+
+        dialog.getDialogPane().setContent(filesTable);
+
+        dialog.getDialogPane().getButtonTypes().addAll(ButtonType.OK, ButtonType.CANCEL);
+
+        filesTable.setMinWidth(650);
+        filesTable.requestFocus();
+
+        return dialog.showAndWait();
+    }
+
+    private Optional<ClipGenerationData> selectClipsDialog(Stage stage, List<File> files) {
+        Dialog<ClipGenerationData> dialog = createStyledDialog(stage.getScene());
+
+        TableView<SelectableData<Clip>> clipsTable = new TableView<>();
+
         clipsTable.setEditable(true);
+
+        TableColumn<SelectableData<Clip>, Boolean> selectedCol = createSelectedCol(clipsTable);
 
         TableColumn<SelectableData<Clip>, String> fileCol =  new TableColumn<>("File");
         fileCol.setCellValueFactory(row -> new SimpleStringProperty(row.getValue().data.file.getName()));
@@ -872,10 +1012,10 @@ public class MainController {
 
         clipsTable.getColumns().addAll(selectedCol, fileCol, nameCol, ratingCol);
 
-        clipsTable.getItems().addAll(files.getSelectionModel().getSelectedItems().stream()
+        clipsTable.getItems().addAll(files.stream()
             .flatMap(file -> fileToClips.getOrDefault(file, Collections.emptyList()).stream())
             .map(clip -> new SelectableData<>(true, clip))
-            .collect(Collectors.toList())
+            .toList()
         );
         clipsTable.setMinWidth(650);
         nameCol.prefWidthProperty().bind(clipsTable.widthProperty().subtract(fileCol.widthProperty()).subtract(80));
@@ -887,7 +1027,7 @@ public class MainController {
         Button deSelect = new Button("De-select");
 
         ComboBox<String> rating = new ComboBox<>();
-        rating.getItems().addAll("all", "not rated", "1", "2", "3", "4", "5");
+        rating.getItems().addAll("not rated", "1", "2", "3", "4", "5");
         rating.getSelectionModel().select(0);
 
         selectOperationRow.getChildren().addAll(select, deSelect, rating);
@@ -898,10 +1038,10 @@ public class MainController {
             String ratingValue = rating.getValue();
             for (int i = 0, max = clipsTable.getItems().size(); i < max; i++) {
                 SelectableData<Clip> row = clipsTable.getItems().get(i);
-                switch (ratingValue) {
-                    case "all": targeted = true; break;
-                    case "not rated": targeted = row.data.rating == null; break;
-                    default: targeted = row.data.rating != null && Integer.parseInt(ratingValue) == row.data.rating; break;
+                if ("not rated".equals(ratingValue)) {
+                    targeted = row.data.rating == null;
+                } else {
+                    targeted = row.data.rating != null && Integer.parseInt(ratingValue) == row.data.rating;
                 }
                 if (targeted) {
                     row.selected.set(selected);
@@ -1026,7 +1166,7 @@ public class MainController {
                                 .setProgressListener(progress -> fileMeta.ifPresent(fm ->
                                     Platform.runLater(() -> progressBar.setProgress((float) progress.getFrame() / estimatedFrameCount))))
                                 .setFilter(StreamType.VIDEO,
-                                        String.format("crop=%d:%d:%d:%d, scale=%d:%d, yadif",
+                                        String.format("yadif=1, crop=%d:%d:%d:%d, scale=%d:%d",
                                                 (int) viewPort.getWidth(),
                                                 (int) viewPort.getHeight(),
                                                 (int) viewPort.getMinX(),
@@ -1106,8 +1246,7 @@ public class MainController {
     }
 
     private void activateClipMode(double minValue, double lowValue, double highValue, double maxValue, Optional<Clip> editingClip) {
-        bottomBarPlay.setVisible(false);
-        bottomBarClip.setVisible(true);
+        playMode.set(false);
 
         rangeSlider.setMin(Math.round(minValue / 1000.0));
         rangeSlider.setMax(Math.round(maxValue / 1000.0));
@@ -1117,7 +1256,7 @@ public class MainController {
 
         this.clipDescription = editingClip.map(clip -> new ClipDescriptionData(clip.label(), clip.description, clip.rating));
 
-        this.editingClip = editingClip;
+        this.editingClip.set(editingClip.orElse(null));
     }
 
     // reset to the top left:
@@ -1218,11 +1357,11 @@ public class MainController {
             this.label = label;
             this.description = description;
             this.rating = rating;
-            this.minValue = minValue;
-            this.lowValue = lowValue;
+            this.minValue = Precision.round(minValue, 2);
+            this.lowValue = Precision.round(lowValue, 2);
 
-            this.highValue = highValue;
-            this.maxValue = maxValue;
+            this.highValue = Precision.round(highValue, 2);
+            this.maxValue = Precision.round(maxValue, 2);
             this.viewportRect = viewportRect;
         }
 
@@ -1268,10 +1407,10 @@ public class MainController {
         public Rectangle2D deserialize(JsonParser jsonParser, DeserializationContext deserializationContext) throws IOException {
             JsonNode node = jsonParser.getCodec().readTree(jsonParser);
             return new Rectangle2D(
-                    node.get("minX").doubleValue(),
-                    node.get("minY").doubleValue(),
-                    node.get("width").doubleValue(),
-                    node.get("height").doubleValue()
+                    Precision.round(node.get("minX").doubleValue(), 2),
+                    Precision.round(node.get("minY").doubleValue(), 2),
+                    Precision.round(node.get("width").doubleValue(), 2),
+                    Precision.round(node.get("height").doubleValue(), 2)
             );
         }
     }
